--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "url": "git+https://github.com/artrei/artreibp.git"
   },
   "keywords": [
-    "gulp",
     "sass",
     "css",
-    "javascript",
-    "js",
     "front-end"
   ],
   "author": "Reda Adiyasa",
@@ -20,21 +17,18 @@
     "url": "https://github.com/artrei/artreibp/issues"
   },
   "homepage": "https://github.com/artrei/artreibp#readme",
-  "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-header": "^2.0.5",
-    "gulp-jshint": "^2.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0",
-    "gulp-util": "^3.0.8",
-    "jshint": "^2.9.5"
+  "scripts": {
+    "watch-sass": "node-sass scss/styles.scss -o css/ --watch",
+    "compile-sass": "node-sass scss/styles.scss -o css/",
+    "storybook": "start-storybook"
   },
   "dependencies": {
-    "bulma": "^0.7.1",
-    "font-awesome": "^4.7.0"
+    "@babel/core": "^7.5.0",
+    "@mdi/font": "^3.7.95",
+    "@storybook/html": "^5.1.9",
+    "babel-loader": "^8.0.6",
+    "bulma": "^0.7.5",
+    "font-awesome": "^4.7.0",
+    "node-sass": "^4.12.0"
   }
 }
