--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/artrei/artreibp#readme",
   "scripts": {
-    "watch": "node-sass scss/styles.scss -o css/ --watch",
-    "compile": "node-sass scss/styles.scss -o css/",
+    "watch": "node-sass scss/styles.scss -o ../css/ --watch",
+    "compile": "node-sass scss/styles.scss -o ../css/",
     "storybook": "start-storybook"
   },
   "dependencies": {
